--- a/Range2RINEX/Range2RINEX.csproj
+++ b/Range2RINEX/Range2RINEX.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Range2RINEX.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RangeParser.cs" />
     <Compile Include="RINEX.cs" />
   </ItemGroup>
   <ItemGroup>
