Parses L5 and SBAS. Rewrite of RINEX exporter. NovLog handles multiple logs

--- a/NovLog/NovLog.csproj
+++ b/NovLog/NovLog.csproj
@@ -47,6 +47,20 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="NovLog.ini">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="ini-parser">
+      <Version>2.5.2</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Range2RINEX\Range2RINEX.csproj">
+      <Project>{daf11f7b-276e-4818-bfd5-2b3095742b1a}</Project>
+      <Name>Range2RINEX</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
