--- a/Range2RINEX/Range2RINEX.csproj
+++ b/Range2RINEX/Range2RINEX.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RangeParser.cs" />
     <Compile Include="RINEX.cs" />
+    <Compile Include="RINEX211Writer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
