--- a/NovLog/NovLog.ini
+++ b/NovLog/NovLog.ini
@@ -13,6 +13,6 @@ auto-L5 = true
 trigger = ontime
 interval = 10
 
-[CLOCKMODELA]
-trigger = ontime
-interval = 600
+;[CLOCKMODELA]
+;trigger = ontime
+;interval = 600
