--- a/NovLog/NovLog.ini
+++ b/NovLog/NovLog.ini
@@ -5,6 +5,7 @@ log-folder = D:\
 error-log = NovLogErr.txt
 discard-on-start = false
 auto-L5 = true
+debug = true
 
 ; One section per type of message to log, named after the message.
 ; Trigger (required) can be "ontime" (interval needed), "once", or "onnew"
